istio-k8s-gateway-api/services/hotrod/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-hotrod-gateways-to-ref-secrets
  namespace: istio-ingress
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: example-hotrod
  to:
  - group: ""
    kind: Secret
