istio-k8s-gateway-api/services/hotrod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hotrod-gateway
  namespace: example-hotrod
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hotrod.internal.magiccityit.com
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "hotrod.internal.magiccityit.com"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: internal-magiccityit-domain-tls
        namespace: istio-ingress
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
